# afl-predictions

./: .debug_meta.py  .dump_prefix_maps.py  .env.example  .gitignore  .inspect_nulls.py  .list_matches_2022.py  .show_stats_json_samples.py  .tmp_db_check.py  README.md  project_context.txt  pyproject.toml  requirements.txt
archive/: .print_matches.py  .show_row.py  README.md  training_output.txt
models/: diagnose_1990_1994_1995.json  diagnose_{train_years[0]}_{train_years[-1]}_{test_year}.json  ensemble_cv_results.csv  ensemble_eval_1990_1994_1995.json  ensemble_performance.json  ensemble_weights.json  ensemble_with_odds_results.json  eval_{train_years[0]}_{train_years[-1]}_{test_year}.json  feature_importance_1990_1994_1995.json  feature_names.json  hparam_random_search_1990_1994_1995.json  hparam_search_1990_1994_1995.json  hyperparameter_tuning_results.txt  mispredictions_report_10_predictions_1990_1994_1995.json  predictions_1990_1994_1995.csv  predictions_1990_1994_1995_ensemble.csv  predictions_1990_1994_1995_fn_top10.csv  predictions_1990_1994_1995_fp_top10.csv  predictions_1990_1994_1995_stacked.csv  predictions_1990_1994_1995_stacked_plus_features.csv  predictions_2000_r1.csv  rf_with_odds_retrain_20260319.json  rf_with_odds_retrain_20260416.json  rf_with_odds_retrain_20260416b.json  stacking_eval_1990_1994_1995.json  stacking_plus_features_eval_1990_1994_1995.json  walkforward_2025_by_round.csv  walkforward_2025_predictions.csv
notes/: 2026_deployment_guide.md  data_sources_research.md  implementation_plan.md  odds_integration_guide.md  odds_poc_results.md  (+3 more)
(+52384 files in other folders)
