[tool.poetry]
name = "afl-predictions"
version = "0.1.0"
description = "AFL match outcome prediction pipeline and data ingestion tools"
authors = ["User <user@example.com>"]
readme = "README.md"

packages = [
  { include = "afl_predictions", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2"
numpy = "^2.0"
requests = "^2.31"
beautifulsoup4 = "^4.12"
scikit-learn = "^1.5"
joblib = "^1.3"
sqlalchemy = "^2.0"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
